onlinestore-app/deploymentG.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlinestore-app-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: onlinestore-app
  replicas: 4 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: onlinestore-app
    spec:
      containers:
      - name: onlinestore-app
        image: duyentran9/onlinestore-app:latest
        ports:
        - containerPort: 8080
