onlinestore-app/podG.yaml
apiVersion: v1
kind: Pod
metadata:
  name: onlinestore-app
  namespace: default
  labels:
    name: onlinestore-app
spec:
  containers:
    - image: duyentran9/onlinestore-app:latest
      name: onlinestore-app
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
