onlinestore-app/serviceG.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlinestore-app-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: onlinestore-app
